--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -9,52 +9,134 @@ body .loading {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: #240229;
+  background-color: #1a1a1f;
+  
+}
+
+.loader h3 {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #03e9f4;
+  overflow: hidden;
+  letter-spacing: 2px;
+  transition: 0.5s ;
+  border-right : 1px solid #03e9f4;
+  animation: typing 3s steps(10) infinite;
+}
+
+.loader:hover h3{
+  color: #111;
+  border-right : 1px solid #111;
+}
+
+@keyframes typing {
+  0%, 90%, 100% {
+    width: 0px;
+  }
+  30%, 60% {
+    width: 128.38px;
+  }
 }
 
 .loader {
   position: relative;
-  width: 200px;
-  height: 200px;
-  border: 4px solid #240229;
+  width: 300px;
+  height: 300px;
+  background: #1a1a1f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+  color: #fff;
   overflow: hidden;
-  border-radius: 50%;
-  box-shadow: -5px -5px 5px rgba(255, 255, 255, 0.1),
-    10px 10px 10px rgba(0, 0, 0, 0.4),
-    inset -5px -5px 5px rgba(255, 255, 255, 0.1),
-    inset 10px 10px 10px rgba(0, 0, 0, 0.4);
+  -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
 }
 
-.loader::before {
-  content: "";
-  position: absolute;
-  top: 25px;
-  left: 25px;
-  right: 20px;
-  bottom: 25px;
-  z-index: 10;
-  background: #240229;
-  border-radius: 50%;
-  border: 2px solid #240229;
-  box-shadow: inset -2px -2px 5px rgba(255, 255, 255, 0.2),
-    inset 3px 3px 5px rgba(0, 0, 0, 0.5);
+.loader:hover {
+  background: #03e9f4;
+  color: #050801;
+  box-shadow: 0 0 5px#03e9f4, 0 0 25px#03e9f4, 0 0 50px#03e9f4, 0 0 200px#03e9f4;
 }
 
 .loader span {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background: linear-gradient(#14ffe9, #ffeb3b, #ff00e0);
-  filter: blur(20px);
-  animation: animate 1s linear infinite;
+  display: block;
 }
 
-@keyframes animate {
+.loader span:nth-child(1) {
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 5px;
+  background: linear-gradient(90deg, transparent, #03e9f4);
+  animation: animate1 2s linear infinite;
+  animation-delay: 0s;
+}
+
+@keyframes animate1 {
   0% {
-    transform: rotate(0deg);
+    left: -100%;
   }
-  100% {
-    transform: rotate(360deg);
+  50%, 100% {
+    left: 100%;
   }
 }
+
+.loader span:nth-child(3) {
+  bottom: 0;
+  right: -100%;
+  width: 100%;
+  height: 5px;
+  background: linear-gradient(270deg, transparent, #03e9f4);
+  animation: animate3 2s linear infinite;
+  animation-delay: 1s;
+}
+
+@keyframes animate3 {
+  0% {
+    right: -100%;
+  }
+  50%, 100% {
+    right: 100%;
+  }
+}
+
+.loader span:nth-child(2) {
+  top: -100%;
+  right: 0;
+  width: 5px;
+  height: 100%;
+  background: linear-gradient(180deg, transparent, #03e9f4);
+  animation: animate2 2s linear infinite;
+  animation-delay: 0.5s;
+}
+
+@keyframes animate2 {
+  0% {
+    top: -100%;
+  }
+  50%, 100% {
+    top: 100%;
+  }
+}
+
+.loader span:nth-child(4) {
+  bottom: -100%;
+  left: 0;
+  width: 5px;
+  height: 100%;
+  background: linear-gradient(360deg, transparent, #03e9f4);
+  animation: animate4 2s linear infinite;
+  animation-delay: 1.5s;
+}
+
+@keyframes animate4 {
+  0% {
+    bottom: -100%;
+  }
+  50%, 100% {
+    bottom: 100%;
+  }
+}
+
