--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: Mars;
+  src: url('../../fonts/Mars.ttf')
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -14,14 +20,14 @@ body .loading {
 }
 
 .loader h3 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Mars;
   font-size: 1.5rem;
   font-weight: bold;
-  color: #03e9f4;
+  color: #1D27E1;
   overflow: hidden;
   letter-spacing: 2px;
   transition: 0.5s ;
-  border-right : 1px solid #03e9f4;
+  border-right : 1px solid #1D27E1;
   animation: typing 3s steps(10) infinite;
 }
 
@@ -35,7 +41,7 @@ body .loading {
     width: 0px;
   }
   30%, 60% {
-    width: 128.38px;
+    width: 178px;
   }
 }
 
@@ -54,9 +60,9 @@ body .loading {
 }
 
 .loader:hover {
-  background: #03e9f4;
+  background: #1D27E1;
   color: #050801;
-  box-shadow: 0 0 5px#03e9f4, 0 0 25px#03e9f4, 0 0 50px#03e9f4, 0 0 200px#03e9f4;
+  box-shadow: 0 0 5px#1D27E1, 0 0 25px#1D27E1, 0 0 50px#1D27E1, 0 0 200px#1D27E1;
 }
 
 .loader span {
@@ -69,7 +75,7 @@ body .loading {
   left: -100%;
   width: 100%;
   height: 5px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
+  background: linear-gradient(90deg, transparent, #1D27E1);
   animation: animate1 2s linear infinite;
   animation-delay: 0s;
 }
@@ -88,7 +94,7 @@ body .loading {
   right: -100%;
   width: 100%;
   height: 5px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
+  background: linear-gradient(270deg, transparent, #1D27E1);
   animation: animate3 2s linear infinite;
   animation-delay: 1s;
 }
@@ -107,7 +113,7 @@ body .loading {
   right: 0;
   width: 5px;
   height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
+  background: linear-gradient(180deg, transparent, #1D27E1);
   animation: animate2 2s linear infinite;
   animation-delay: 0.5s;
 }
@@ -126,7 +132,7 @@ body .loading {
   left: 0;
   width: 5px;
   height: 100%;
-  background: linear-gradient(360deg, transparent, #03e9f4);
+  background: linear-gradient(360deg, transparent, #1D27E1);
   animation: animate4 2s linear infinite;
   animation-delay: 1.5s;
 }
